[workspace]
members = [
    "crates/*",
    "crates/upsilon-test-support/setup_testenv",
    "crates/upsilon-test-support/upsilon-test-support-macros",
]
default-members = ["crates/cargo-guard"]

[workspace.dependencies]
bitflags = "2.0.0-rc.1"
clap = { version = "4.0.26", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
regex = "1.7.0"
reqwest = "0.11.13"
anyhow = "1.0.66"
path-slash = "0.2.1"
lazy_static = "1.4.0"
tokio = { version = "1.22.0", features = ["full"] }
futures = "0.3.25"
linkme = "0.3"
thiserror = "1.0"
juniper = "0.15.10"
openssl = "0.10.43"
chrono = { version = "0.4.23", features = ["serde"] }
async-trait = "0.1.59"
git2 = "0.15"
libc = "0.2"
winapi = "0.3"
log = "0.4.17"
pretty_env_logger = "0.4.0"

upsilon-api = { path = "crates/upsilon-api" }
upsilon-asyncvcs = { path = "crates/upsilon-asyncvcs" }
upsilon-ci = { path = "crates/upsilon-ci" }
upsilon-core = { path = "crates/upsilon-core" }
upsilon-data = { path = "crates/upsilon-data" }
upsilon-data-cache-inmemory = { path = "crates/upsilon-data-cache-inmemory" }
upsilon-data-inmemory = { path = "crates/upsilon-data-inmemory" }
upsilon-data-pg = { path = "crates/upsilon-data-pg" }
upsilon-git-hooks = { path = "crates/upsilon-git-hooks" }
upsilon-gracefully-shutdown = { path = "crates/upsilon-gracefully-shutdown" }
upsilon-hook-registrar = { path = "crates/upsilon-hook-registrar" }
upsilon-id = { path = "crates/upsilon-id" }
upsilon-models = { path = "crates/upsilon-models" }
upsilon-procx = { path = "crates/upsilon-procx" }
upsilon-stdx = { path = "crates/upsilon-stdx" }
upsilon-test-support = { path = "crates/upsilon-test-support" }
upsilon-vcs = { path = "crates/upsilon-vcs" }
upsilon-web = { path = "crates/upsilon-web" }
upsilon-web-interface = { path = "crates/upsilon-web-interface" }
upsilon-xtask = { path = "crates/upsilon-xtask" }

#[patch.crates-io]
#rocket_http = { git = "https://github.com/dnbln/Rocket", rev = "e9d729a8b36b2d707c5db1e65ce0d5a717d4469d" }
#rocket_codegen = { git = "https://github.com/dnbln/Rocket", rev = "e9d729a8b36b2d707c5db1e65ce0d5a717d4469d" }
#rocket = { git = "https://github.com/dnbln/Rocket", rev = "e9d729a8b36b2d707c5db1e65ce0d5a717d4469d" }
