[workspace]
members = [
    "crates/*",
    "dev/*",
]
default-members = ["dev/cargo-guard"]

[workspace.metadata.lints]
unsafe_code = "deny"
unused_imports = "deny"

clippy.uninlined_format_args = "deny"
clippy.empty_structs_with_brackets = "warn"
clippy.cast_possible_truncation = "warn"
clippy.explicit_auto_deref = "deny"
clippy.new_without_default = "deny"

[workspace.dependencies]
anyhow = "1.0.66"
async-trait = "0.1.59"
bitflags = "2.0.0-rc.1"
cargo = "0.68.0"
cargo-cranky = { path = "dev/cargo-cranky" }
cargo-difftests = { path = "dev/cargo-difftests", version = "0.1.0" }
cargo-difftests-core = { path = "dev/cargo-difftests-core", version = "0.1.0" }
cargo-difftests-testclient = { path = "dev/cargo-difftests-testclient", version = "0.1.0" }
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.26", features = ["derive"] }
ctrlc = "3.2.0"
fs_extra = "1.2.0"
futures = "0.3.25"
git2 = "0.16"
humantime = "2.1.0"
juniper = "0.15.10"
lazy_static = "1.4.0"
libc = "0.2"
linkme = "0.3"
log = "0.4.17"
logos = "0.12.1"
openssl = "0.10.43"
path-absolutize = "3.0.14"
path-slash = "0.2.1"
pretty_env_logger = "0.4.0"
regex = "1.7.0"
reqwest = "0.11.13"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
russh-keys = { version = "0.24.0", features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.17"
thiserror = "1.0"
tokio = { version = "1.22.0", features = ["full"] }
ukonf = { path = "dev/ukonf" }
winapi = "0.3"


upsilon-api = { path = "crates/upsilon-api" }
upsilon-asyncvcs = { path = "crates/upsilon-asyncvcs" }
upsilon-core = { path = "crates/upsilon-core" }
upsilon-data = { path = "crates/upsilon-data" }
upsilon-data-cache-inmemory = { path = "crates/upsilon-data-cache-inmemory" }
upsilon-data-inmemory = { path = "crates/upsilon-data-inmemory" }
upsilon-data-pg = { path = "crates/upsilon-data-pg" }
upsilon-diff-util = { path = "dev/upsilon-diff-util" }
upsilon-git-hooks = { path = "crates/upsilon-git-hooks" }
upsilon-gracefully-shutdown = { path = "dev/upsilon-gracefully-shutdown" }
upsilon-gracefully-shutdown-host = { path = "dev/upsilon-gracefully-shutdown-host" }
upsilon-id = { path = "crates/upsilon-id" }
upsilon-json-diff = { path = "dev/upsilon-json-diff" }
upsilon-models = { path = "crates/upsilon-models" }
upsilon-procx = { path = "crates/upsilon-procx" }
upsilon-ssh = { path = "crates/upsilon-ssh" }
upsilon-ssh-russh = { path = "crates/upsilon-ssh-russh" }
upsilon-stdx = { path = "crates/upsilon-stdx" }
upsilon-test-support = { path = "dev/upsilon-test-support" }
upsilon-test-support-macros = { path = "dev/upsilon-test-support-macros" }
upsilon-vcs = { path = "crates/upsilon-vcs" }
upsilon-vcs-permissions = { path = "crates/upsilon-vcs-permissions" }
upsilon-web = { path = "crates/upsilon-web" }
upsilon-web-interface = { path = "crates/upsilon-web-interface" }
upsilon-xtask = { path = "dev/upsilon-xtask" }

[patch.crates-io]
procfs = { git = "https://github.com/eminence/procfs", rev = "faf30237720279af23bf2e9190499c3c35aa3955" }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", rev = "c17e8145baa4790319fdb6a473e465b960f55e7c" }
