[workspace]
members = [
    "crates/*",
    "dev/*",
    "plugins/*",
    "tools/3rd-party/*",
    "tools/cargo-difftests/*",
]
default-members = ["dev/cargo-guard"]

[workspace.dependencies]
anyhow = "1.0.66"
async-trait = "0.1.59"
bitflags = "2.0.0-rc.1"
cargo = "0.68.0"
cargo-cranky = { path = "tools/3rd-party/cargo-cranky" }
cargo-difftests = { path = "tools/cargo-difftests/cargo-difftests", version = "0.1.1" }
cargo-difftests-core = { path = "tools/cargo-difftests/cargo-difftests-core", version = "0.1.1" }
cargo-difftests-testclient = { path = "tools/cargo-difftests/cargo-difftests-testclient", version = "0.1.1" }
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.26", features = ["derive"] }
ctrlc = "3.2.0"
fs_extra = "1.2.0"
futures = "0.3.25"
git2 = "0.16"
humantime = "2.1.0"
juniper = "0.15.10"
lazy_static = "1.4.0"
libc = "0.2"
linkme = "0.3"
log = "0.4.17"
logos = "0.12.1"
openssl = "0.10.43"
path-absolutize = "3.0.14"
path-slash = "0.2.1"
pretty_env_logger = "0.4.0"
regex = "1.7.0"
reqwest = "0.11.13"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
russh-keys = { version = "0.24.0", features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.17"
thiserror = "1.0"
tokio = { version = "1.22.0", features = ["full"] }
ukonf = { path = "dev/ukonf" }
winapi = "0.3"


upsilon-api = { path = "crates/upsilon-api" }
upsilon-asyncvcs = { path = "crates/upsilon-asyncvcs" }
upsilon-core = { path = "crates/upsilon-core" }
upsilon-data = { path = "crates/upsilon-data" }
upsilon-data-cache-inmemory = { path = "crates/upsilon-data-cache-inmemory" }
upsilon-data-inmemory = { path = "crates/upsilon-data-inmemory" }
upsilon-data-pg = { path = "crates/upsilon-data-pg" }
upsilon-debug-data-driver = { path = "plugins/upsilon-debug-data-driver" }
upsilon-diff-util = { path = "dev/upsilon-diff-util" }
upsilon-git-hooks = { path = "crates/upsilon-git-hooks" }
upsilon-gracefully-shutdown = { path = "dev/upsilon-gracefully-shutdown" }
upsilon-gracefully-shutdown-host = { path = "dev/upsilon-gracefully-shutdown-host" }
upsilon-id = { path = "crates/upsilon-id" }
upsilon-json-diff = { path = "dev/upsilon-json-diff" }
upsilon-plugin-bin = { path = "crates/upsilon-plugin-bin" }
upsilon-plugin-core = { path = "crates/upsilon-plugin-core" }
upsilon-plugin-manager = { path = "crates/upsilon-plugin-manager" }
upsilon-plugins-static = { path = "crates/upsilon-plugins-static" }
upsilon-portfile-writer = { path = "plugins/upsilon-portfile-writer" }
upsilon-models = { path = "crates/upsilon-models" }
upsilon-procx = { path = "crates/upsilon-procx" }
upsilon-ssh = { path = "crates/upsilon-ssh" }
upsilon-ssh-russh = { path = "crates/upsilon-ssh-russh" }
upsilon-stdx = { path = "crates/upsilon-stdx" }
upsilon-test-support = { path = "dev/upsilon-test-support" }
upsilon-test-support-macros = { path = "dev/upsilon-test-support-macros" }
upsilon-vcs = { path = "crates/upsilon-vcs" }
upsilon-vcs-permissions = { path = "crates/upsilon-vcs-permissions" }
upsilon-web = { path = "crates/upsilon-web" }
upsilon-web-interface = { path = "crates/upsilon-web-interface" }
upsilon-xtask = { path = "dev/upsilon-xtask" }

[patch.crates-io]
procfs = { git = "https://github.com/eminence/procfs", rev = "faf30237720279af23bf2e9190499c3c35aa3955" }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", rev = "c17e8145baa4790319fdb6a473e465b960f55e7c" }
rocket = { git = "https://github.com/dnbln/Rocket", rev = "f6ec20987fbb52fbd8475d0d558ce87e82a99a7e" }
rocket_http = { git = "https://github.com/dnbln/Rocket", rev = "f6ec20987fbb52fbd8475d0d558ce87e82a99a7e" }
rocket_codegen = { git = "https://github.com/dnbln/Rocket", rev = "f6ec20987fbb52fbd8475d0d558ce87e82a99a7e" }


[workspace.metadata.lints]
unsafe_code = "deny"
unused_imports = "deny"
unused_must_use = "deny"

clippy.uninlined_format_args = "deny"
clippy.cast_possible_truncation = "warn"
clippy.new_without_default = "deny"
clippy.ptr_arg = "deny"
clippy.async_yields_async = "deny"
clippy.assertions_on_result_states = "deny"
clippy.await_holding_invalid_type = "deny"
clippy.await_holding_lock = "deny"
clippy.await_holding_refcell_ref = "deny"
clippy.bind_instead_of_map = "deny"
clippy.blocks_in_if_conditions = "deny"
clippy.bool_assert_comparison = "deny"
clippy.bool_comparison = "deny"
clippy.bool_to_int_with_if = "deny"
clippy.borrow_deref_ref = "deny"
clippy.borrowed_box = "deny"
clippy.box_collection = "deny"
clippy.box_default = "deny"
clippy.boxed_local = "deny"
clippy.branches_sharing_code = "deny"
clippy.builtin_type_shadow = "deny"
clippy.bytes_count_to_len = "deny"
clippy.bytes_nth = "deny"
clippy.cast_abs_to_unsigned = "deny"
clippy.cast_enum_constructor = "deny"
clippy.cast_enum_truncation = "deny"
clippy.cast_lossless = "deny"
clippy.cast_nan_to_int = "deny"
clippy.cast_possible_wrap = "deny"
clippy.char_lit_as_u8 = "deny"
clippy.chars_last_cmp = "deny"
clippy.chars_next_cmp = "deny"
clippy.clone_on_copy = "deny"
clippy.clone_on_ref_ptr = "deny"
clippy.cloned_instead_of_copied = "deny"
clippy.cognitive_complexity = "deny"
clippy.collapsible_if = "deny"
clippy.collapsible_else_if = "deny"
clippy.collapsible_match = "deny"
clippy.collapsible_str_replace = "deny"
clippy.comparison_chain = "deny"
clippy.comparison_to_empty = "deny"
clippy.copy_iterator = "deny"
clippy.crate_in_macro_def = "deny"
clippy.create_dir = "deny"
clippy.debug_assert_with_mut_call = "deny"
clippy.decimal_literal_representation = "deny"
clippy.deref_addrof = "deny"
clippy.derive_ord_xor_partial_ord = "deny"
clippy.derive_partial_eq_without_eq = "deny"
clippy.diverging_sub_expression = "deny"
clippy.doc_link_with_quotes = "deny"
clippy.double_neg = "deny"
clippy.drop_copy = "deny"
clippy.duplicate_mod = "deny"
clippy.duplicate_underscore_argument = "deny"
clippy.empty_drop = "deny"
clippy.empty_enum = "deny"
clippy.empty_line_after_outer_attr = "deny"
clippy.empty_loop = "deny"
clippy.empty_structs_with_brackets = "deny"
clippy.enum_glob_use = "deny"
clippy.enum_variant_names = "deny"
clippy.equatable_if_let = "deny"
clippy.expect_fun_call = "deny"
clippy.expl_impl_clone_on_copy = "deny"
clippy.explicit_auto_deref = "deny"
clippy.explicit_counter_loop = "deny"
clippy.explicit_deref_methods = "deny"
clippy.explicit_into_iter_loop = "deny"
clippy.explicit_iter_loop = "deny"
clippy.explicit_write = "deny"
clippy.extend_with_drain = "deny"
clippy.extra_unused_lifetimes = "deny"
clippy.extra_unused_type_parameters = "deny"
clippy.filter_map_identity = "deny"
clippy.filter_map_next = "deny"
clippy.filter_next = "deny"
clippy.flat_map_identity = "deny"
clippy.flat_map_option = "deny"
#clippy.fn_params_excessive_bools = "deny"
clippy.fn_to_numeric_cast_any = "deny"
clippy.fn_to_numeric_cast_with_truncation = "deny"
clippy.for_kv_map = "deny"
clippy.forget_copy = "deny"
clippy.forget_non_drop = "deny"
clippy.format_in_format_args = "deny"
clippy.format_push_string = "deny"
clippy.from_iter_instead_of_collect = "deny"
clippy.from_over_into = "deny"
clippy.get_first = "deny"
clippy.get_last_with_len = "deny"
clippy.get_unwrap = "deny"
clippy.identity_op = "deny"
clippy.if_not_else = "deny"
clippy.if_then_some_else_none = "deny"
