[package]
name = "upsilon-api-models-protobuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkme = "0.3.5"
upsilon-procx = { path = "../upsilon-procx" }
bytes = "1.3.0"

prost = "0.11.2"
prost-types = "0.11.2"

[build-dependencies]
prost-build = "0.11.2"