[package]
name = "upsilon-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
futures.workspace = true
juniper.workspace = true
juniper_rocket = "0.8.2"
jwt = { version = "0.16.0", features = ["openssl"] }
linkme.workspace = true
openssl.workspace = true
path-slash.workspace = true
rocket.workspace = true
russh-keys.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }

upsilon-asyncvcs.workspace = true
upsilon-core.workspace = true
upsilon-data.workspace = true
upsilon-models.workspace = true
upsilon-procx.workspace = true
upsilon-vcs.workspace = true
