[package]
name = "upsilon-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
futures.workspace = true
juniper.workspace = true
juniper_rocket.workspace = true
jwt.workspace = true
linkme.workspace = true
openssl.workspace = true
path-slash.workspace = true
rocket.workspace = true
russh-keys.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

upsilon-asyncvcs.workspace = true
upsilon-core.workspace = true
upsilon-data.workspace = true
upsilon-models.workspace = true
upsilon-procx.workspace = true
upsilon-vcs.workspace = true
