[package]
name = "upsilon-data-cache-inmemory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moka = { version = "0.9.6", features = ["future"] }
thiserror.workspace = true
tokio.workspace = true

upsilon-data.workspace = true
upsilon-models.workspace = true
