[package]
name = "upsilon-data-inmemory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
upsilon-data = { path = "../upsilon-data" }
upsilon-models = { path = "../upsilon-models" }
tokio = { version = "1", features = ["full"] }
thiserror = "1"