[package]
name = "upsilon-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"


upsilon-models = { path = "../upsilon-models" }
upsilon-procx = { path = "../upsilon-procx" }