[package]
name = "upsilon-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true


upsilon-models.workspace = true
upsilon-procx.workspace = true