[package]
name = "upsilon-debug-data-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dump_gql_response = []

[dependencies]
tokio.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true

log = "0.4"
pretty_env_logger = "0.4"