[package]
name = "upsilon-gracefully-shutdown-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc.workspace = true
clap.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true
procfs = "0.14"

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["processthreadsapi", "wincon"] }
