[package]
name = "upsilon-hook-registrar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
linkme = "0.3.5"
upsilon-data = { path = "../upsilon-data" }
upsilon-models = { path = "../upsilon-models" }