[package]
name = "upsilon-hook-registrar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
linkme.workspace = true
upsilon-data.workspace = true
upsilon-models.workspace = true