[package]
name = "upsilon-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt.workspace = true
bitflags.workspace = true
juniper.workspace = true
russh-keys.workspace = true
rust-argon2.workspace = true
serde.workspace = true
thiserror.workspace = true

upsilon-core.workspace = true
upsilon-id.workspace = true
upsilon-stdx.workspace = true