[package]
name = "upsilon-plugin-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

upsilon-models.workspace = true
