[package]
name = "upsilon-plugin-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dynamic-plugins"]
dynamic-plugins = ["libloading"]

[dependencies]
libloading = { version = "0.7.4", optional = true }
rocket.workspace = true
thiserror.workspace = true
tokio.workspace = true

upsilon-plugin-core.workspace = true
