[package]
name = "upsilon-procx"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
proc-macro2 = "1"
quote = "1"
syn = {version = "1", features = ["full"]}
