[package]
name = "upsilon-procx"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
