[package]
name = "upsilon-ssh-russh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace = true
humantime.workspace = true
log.workspace = true
russh = { version = "0.36.0", features = ["openssl"] }
russh-keys.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

upsilon-core.workspace = true
upsilon-data.workspace = true
upsilon-models.workspace = true
upsilon-ssh.workspace = true
upsilon-vcs.workspace = true
upsilon-vcs-permissions.workspace = true
