[package]
name = "upsilon-test-support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
colored = "2.0"
git2.workspace = true
log.workspace = true
portpicker = "0.1.1"
pretty_env_logger.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
similar = "2.2"
tokio.workspace = true

upsilon-gracefully-shutdown.workspace = true
upsilon-test-support-macros = { path = "upsilon-test-support-macros" }
