[package]
name = "upsilon-vcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
path-slash = "0.2.1"
git2 = "0.15"

upsilon-core.workspace = true