[package]
name = "upsilon-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["static-plugins"]
static-plugins = ["upsilon-plugins-static", "plugins"]
plugins = []

[dependencies]
figment = { version = "0.10.8", features = ["yaml"] }
futures.workspace = true
lazy_static.workspace = true
path-slash.workspace = true
regex.workspace = true
rocket.workspace = true
rocket-basicauth = "2.1.1"
rocket_cors = "0.6.0-alpha1"
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

upsilon-api.workspace = true
upsilon-core.workspace = true
upsilon-data.workspace = true
upsilon-data-inmemory.workspace = true
upsilon-id.workspace = true
upsilon-data-cache-inmemory.workspace = true
upsilon-plugin-core.workspace = true
upsilon-plugin-manager.workspace = true
upsilon-plugins-static = { workspace = true, optional = true }
upsilon-ssh.workspace = true
upsilon-ssh-russh.workspace = true
upsilon-vcs.workspace = true
upsilon-vcs-permissions.workspace = true
upsilon-web-interface.workspace = true

