[package]
name = "upsilon-xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
anyhow = "1.0.66"
git2 = "0.15.0"
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }