[package]
name = "upsilon-xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
anyhow.workspace = true
git2.workspace = true
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }