[package]
name = "upsilon-xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
git2.workspace = true
glob = "0.3.1"
path-slash.workspace = true
toml_edit = "0.17.1"
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }
