[package]
name = "cargo-difftests-testclient"
version = "0.1.0"
edition = "2021"
description = "cargo-difftests: test client library"
license = "Apache-2.0"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-difftests-core.workspace = true
serde_json.workspace = true
