[package]
name = "cargo-difftests"
version = "0.0.0"
edition = "2021"
description = "A tool to find which tests have changed"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cargo-difftests-core.workspace = true
clap.workspace = true
git2.workspace = true
log.workspace = true
path-absolutize.workspace = true
pretty_env_logger.workspace = true
rustc-demangle = "0.1.21"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
