[package]
name = "upsilon-debug-data-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dump_gql_response = []

[dependencies]
anyhow.workspace = true
clap.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
reqwest = { workspace = true, features = ["json"] }
rocket.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

upsilon-plugin-core.workspace = true
