[package]
name = "upsilon-difftests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true

git2.workspace = true

ra_ap_hir = "0.0.149"
ra_ap_hir_def = "0.0.149"
ra_ap_hir_expand = "0.0.149"
ra_ap_hir_ty = "0.0.149"
ra_ap_ide = "0.0.149"
ra_ap_ide_db = "0.0.149"
ra_ap_paths = "0.0.149"
ra_ap_proc_macro_api = "0.0.149"
ra_ap_proc_macro_srv = "0.0.149"
ra_ap_project_model = "0.0.149"
ra_ap_rust-analyzer = "0.0.149"
ra_ap_syntax = "0.0.149"
ra_ap_vfs = "0.0.149"

rustc-demangle = "0.1.21"

serde.workspace = true
serde_json.workspace = true

upsilon-difftests-core.workspace = true
