[package]
name = "upsilon-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
colored = "2.0.0"
home = "0.5.4"
log.workspace = true
logos.workspace = true
pretty_env_logger.workspace = true
reqwest = { workspace = true, features = ["json"] }
rustyline = { version = "11.0.0", features = ["case_insensitive_history_search", "with-fuzzy"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

