[package]
name = "upsilon-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
colored.workspace = true
home.workspace = true
log.workspace = true
logos.workspace = true
pretty_env_logger.workspace = true
reqwest.workspace = true
rustyline.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

