[package]
name = "upsilon-test-support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
# FIXME: Add this dependency only when the profile is difftests
cargo-difftests-testclient.workspace = true
futures.workspace = true
git2.workspace = true
log.workspace = true
portpicker.workspace = true
pretty_env_logger.workspace = true
reqwest.workspace = true
russh-keys.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

upsilon-diff-util.workspace = true
upsilon-gracefully-shutdown.workspace = true
upsilon-json-diff.workspace = true
upsilon-test-support-macros.workspace = true
